<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">


    <string name="app_name">SunRise</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="enter_pin_code">Enter Pin code</string>
    <string name="action_settings">Settings</string>
    <string name="pref_location_label">Location Zipcode</string>
    <string name="pref_location_key">location</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="pref_location_pincode">Location</string>
    <string name="pref_location_value">560034</string>
    <string name="country_location">Country Location</string>
    <string name="inline_preferences">inline_preferences</string>
    <string name="pref_select_temperature_units">Select temperature units</string>
    <string name="pref_temp_units_key">units</string>
    <string name="pref_unit_default">metric</string>
    <string name="pref_unit_imperial">imperial</string>
    <string name="pref_location_status_key" translatable="false">loc-status</string>
    <!--<string name="format_art_url" translatable="false">https://raw.githubusercontent.com/udacity/Sunshine-Version-2/sunshine_master/app/src/main/res/drawable-xxhdpi/art_ <xliff:g id="description">%s</xliff:g>.png</string>-->

    <string name="pref_location_error_description">Invalid Location (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>
    <string name="pref_location_unknown_description">Validating Location... (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>


    <!--Empty Weather Database-->
    <string name="empty_forecast_list">No Weather Information Available</string>
    <string name="empty_forecast_list_no_network">No weather information available. The network is not available to fetch data</string>
    <string name="empty_forecast_list_server_down">No weather information available. The server is not returning data</string>
    <string name="empty_forecast_list_server_error">No weather information available. The server is not returning valid data. Please check for an updated version of SunRise</string>
    <string name="empty_forecast_list_location_invalid">No weather information available. The location in settings is not recognized by the weather server.</string>

    <string-array name="units_list">
        <item>metric</item>
        <item>imperial</item>
    </string-array>

    <string-array name="icon_list">
        <item>@string/pref_art_pack_sunrise</item>
        <item>@string/pref_art_pack_cute_dogs</item>
    </string-array>

    <string-array name="icon_list_options">
        <item>SunRise</item>
        <item>Cute dogs</item>
    </string-array>


    <string name="pref_art_pack_sunrise" translatable="false">https://raw.githubusercontent.com/udacity/Sunshine-Version-2/sunshine_master/app/src/main/res/drawable-xxhdpi/art_%s.png</string>
    <string name="pref_art_pack_cute_dogs" translatable="false">https://raw.githubusercontent.com/udacity/Sunshine-Version-2/sunshine_master/app/src/main/res/drawable-mdpi/art_%s.png</string>


    <!--<string name="pref_art_pack_sunrise" translatable="false">https://www.iriemo.com/sunrise/Archive/Colored/art_%s.png</string>
    <string name="pref_art_pack_cute_dogs" translatable="false">https://www.iriemo.com/sunrise/Archive/Mono/art_%s.png</string>-->

    <string name="temperature_units">Temperature Units</string>
    <string name="show_location">Map Location</string>
    <string name="share_weather">Share Weather</string>
    <string name="detail_activity">Detail Activity</string>
    <string name="settings_activity">Settings</string>
    <string name="third_activity">Third Activity</string>
    <string name="start_service">Start Service</string>

    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="format_full_friendly_date">
        <xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g>
    </string>
    
    <string name="format_temperature">
         <xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
         
    <string name="format_wind_mph">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
</string>
    <!-- Wind in kph [CHAR LIMIT=25] -->
<string name="format_wind_kmh">
Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
</string>
    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>
    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>
    <string name="weather_icon">Weather Icon</string>

    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="sync_account_type">sunrise.iriemo.com</string>
    <string name="content_authority">iriemo.bangaloreweather</string>

    <string name="pref_last_notification">last_notification</string>
    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Weather Notifications</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>


    <!-- Notification Format -->
<string name="format_notification">
Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
</string>
    <string name="icon_pack">Icon packs</string>
    <string name="pref_select_icon_pack">Select Icon pack</string>
    <string name="pref_icon_pack_default_value">@string/pref_art_pack_sunrise</string>
    <string name="pref_icon_pack_key">icon_pack</string>
    <string name="gcm_sender_id">679719083280</string>
    <string name="pref_user">user_pref</string>

</resources>
